--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="carousel-container">
                 <div class="carousel" id="carousel">
                     <div class="carousel-item">
-                        <img src="images\.Picsart_23-08-29_16-36-25-755.jpg" alt="Birthday celebration" class="carousel-img">
+                        <img src="images/Picsart_23-08-29_16-36-25-755.jpg" alt="Birthday celebration" class="carousel-img">
                     </div>
                     
                     <div class="carousel-item">
