--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday!</title>
-    <link rel="icon" type="image/png" href="C:\Users\Param\Downloads\pngtree-vector-cake-icon-png-image_563166.jpg">
+    <link rel="icon" type="image/png" href="images/icon.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -164,3 +164,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
