--- a/index.html
+++ b/index.html
@@ -123,25 +123,25 @@
                     </div>
 
                     <div class="carousel-item">
-                        <video width="100%" height="1000px" controls>
+                        <video controls>
                         <source src="images/bdy.mp4" type="video/mp4">
                         </video>
                     </div>
 
                     <div class="carousel-item">
-                        <video width="100%" height="1000px" controls>
+                        <video controls>
                         <source src="images/saranya singing.mp4" type="video/mp4">
                         </video>
                     </div>
 
                     <div class="carousel-item">
-                        <video width="100%" height="1000px" controls>
+                        <video controls>
                         <source src="images/VID-20250905-WA0102.mp4" type="video/mp4">
                         </video>
                     </div>
 
                     <div class="carousel-item">
-                        <video width="100%" height="1000px" controls>
+                        <video controls>
                         <source src="images/WhatsApp Video 2025-02-04 at 23.10.11_c7b3ddad.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -164,5 +164,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
