--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -123,25 +124,25 @@
                     </div>
 
                     <div class="carousel-item">
-                        <video controls>
+                        <video width="500" height="1000" controls>
                         <source src="images/bdy.mp4" type="video/mp4">
                         </video>
                     </div>
 
                     <div class="carousel-item">
-                        <video controls>
+                        <video width="500" height="1000" controls>
                         <source src="images/saranya singing.mp4" type="video/mp4">
                         </video>
                     </div>
 
                     <div class="carousel-item">
-                        <video controls>
+                        <video width="500" height="1000" controls>
                         <source src="images/VID-20250905-WA0102.mp4" type="video/mp4">
                         </video>
                     </div>
 
                     <div class="carousel-item">
-                        <video controls>
+                        <video width="500" height="1000" controls>
                         <source src="images/WhatsApp Video 2025-02-04 at 23.10.11_c7b3ddad.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -164,9 +165,6 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
 
 
 
