--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="page1" class="page active">
         <div class="container">
             <h1>Happy Birthday!</h1>
-            <h2>Saranya Paithiyam💜✨</h2>
+            <h2>Paithiyam💜✨</h2>
             <p>Wishing you a day filled with happiness and a year filled with joy!</p>
             <p>Make a wish and blow out(Touch the candle) the candle!</p>
             
@@ -67,7 +67,7 @@
     <div id="page2" class="page">
         <div class="container">
             <h1>Happy Birthday!</h1>
-            <h2>Saranya Paithiyam💜✨</h2>
+            <h2>Paithiyam💜✨</h2>
             <p>Wish you many more happy returns of the day eruma🍰💙✨.Onn life la nan eppdinu theriyathu but ennaku neariya edathula support ah 
                 iruntha athu mattum ilama nan inniku ivaloo thooram irukean na athuku neeum oru karnam than life la eppavum happy ah iru jolly
                 enjoy pannu itha nan sollanum ila nee enjoy pannitu than iruka😂.Best wishes for my best friend Happy birthday Paithiyam💜✨.Ithu 
@@ -165,6 +165,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
