--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </i></p>
             <p>May your day be filled with laughter, love, and wonderful moments.</p>
             
-            <button class="next-btn" onclick="showPage(3)">Photo Gallery<i class="fas fa-images"></i></button>
+            <button class="next-btn" onclick="showPage(3)">Photo Gallery</button>
         </div>
     </div>
 
@@ -84,6 +84,7 @@
         <div class="container">
             <h2>Me💙 and You💜</h2>
             <p>Namma neriya memories create pannirukom athula konjam ithula iruku✨</p>
+            <p>Slide for next</p>
             
             <div class="carousel-container">
                 <div class="carousel" id="carousel">
@@ -157,6 +158,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
