--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2>Paithiyam💜✨</h2>
             <p>Wish you many more happy returns of the day eruma🍰💙✨.Onn life la nan eppdinu theriyathu but ennaku neariya edathula support ah 
                 iruntha athu mattum ilama nan inniku ivaloo thooram irukean na athuku neeum oru karnam than life la eppavum happy ah iru jolly
-                enjoy pannu itha nan sollanum ila nee enjoy pannitu than iruka😂.Best wishes for my best friend Happy birthday Paithiyam💜✨.Ithu 
+                enjoy pannu itha nan sollanum ila nee enjoy pannitu than iruka😂.Puthu friends keadachitanganu enna eppavum maranthuratha🙂.Best wishes for my best friend Happy birthday Paithiyam💜✨.Ithu 
                 nanea onnakaga create panna web page ippadi irukunu sollu😁.
             </i></p>
             <p>May your day be filled with laughter, love, and wonderful moments.</p>
