--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 
                 <div class="carousel-dots" id="carousel-dots"></div>
             </div>
-            
+            <h2>Once again happy Birthday Paithiyam😇🫂💜<br>Stay happy forever ✨</h2>
             <button class="next-btn" onclick="showPage(1)">Start Again</button>
         </div>
     </div>
